--- a/Mr.Park/04_Functions.ipynb
+++ b/Mr.Park/04_Functions.ipynb
@@ -291,6 +291,36 @@
     "\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lambda Expression\n",
+    "+ 한 줄에 쓰는 간단한 함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John Backus, James Gosling, Alan Kay, Dennis Riechie\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = [\"Dennis Riechie\", \"Alan Kay\", \"John Backus\", \"James Gosling\"]\n",
+    "\n",
+    "# 간단하기 때문에 함수 이름은 없어도 된다. 함수 대신에 람다 넣기 가늉\n",
+    "names.sort(key=lambda name: name.split()[-1]) # 성을 가져오는 것 \".split()[-1]\" 성을 기준으로 sorting을 하겠다는 심산\n",
+    "nameString = \", \".join(names)\n",
+    "print(nameString)"
+   ]
   }
  ],
  "metadata": {
