--- a/Mr.Park/06_Miscellaneous_Topics.ipynb
+++ b/Mr.Park/06_Miscellaneous_Topics.ipynb
@@ -145,6 +145,58 @@
     "\n",
     "main()    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Swapping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2 \n",
+    "y = 3\n",
+    "#(y, x)는 숨겨진 튜플의 형태임으로 이것을 다시 x, y에 할당\n",
+    "x, y = y, x\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# power: 거듭제곱 함수\n",
+    "def power(r, n):\n",
+    "    if n > 1:\n",
+    "        return r*power(r, n-1)\n",
+    "    else:\n",
+    "        return r\n",
+    "print(power(2, 3))"
+   ]
   }
  ],
  "metadata": {
