--- a/Mr.Park/07_Object-Oriented_Programming.ipynb
+++ b/Mr.Park/07_Object-Oriented_Programming.ipynb
@@ -79,6 +79,128 @@
     "\n",
     "# abstract를 한 경우, 상속받은 것만 사용할 수 있다(?)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding new Instance Variavles to a Subclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a parent\n",
+      "I am a child\n",
+      "I am a parent\n",
+      "--------------------------------------------------\n",
+      "temp parent\n",
+      "temp child\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Parent:\n",
+    "    def __init__(self):\n",
+    "        self._parent = 'I am a parent'\n",
+    "        self._temp = 'temp parent'\n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def __init__(self):\n",
+    "        super().__init__() # 해당 코드의 위치가 변경이 될 경우, 때에 따라 문제가 생길 수 있음으로 항상 처음 라인에 작성하는 것을 추천\n",
+    "        self._temp = 'temp child'\n",
+    "        self._child = 'I am a child'\n",
+    "\n",
+    "p = Parent()\n",
+    "c = Child()\n",
+    "\n",
+    "print(p._parent)\n",
+    "print(c._child)\n",
+    "print(c._parent)\n",
+    "print('-' * 50)\n",
+    "print(p._temp)\n",
+    "print(c._temp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Multiple Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am A\n",
+      "I am B\n",
+      "I am A\n",
+      "I am B\n",
+      "I am E\n",
+      "(<class '__main__.E'>, <class '__main__.B'>, <class '__main__.A'>, <class 'object'>)\n",
+      "(<class '__main__.J'>, <class '__main__.H'>, <class '__main__.F'>, <class '__main__.G'>, <class '__main__.I'>, <class '__main__.E'>, <class '__main__.B'>, <class '__main__.A'>, <class 'object'>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def print():\n",
+    "        print('I am A')\n",
+    "\n",
+    "class B:\n",
+    "    def print():\n",
+    "        print('I am B')\n",
+    "\n",
+    "class C(A, B):\n",
+    "    pass\n",
+    "\n",
+    "class D(B, A): # 순서상 왼쪽이 우선함 \n",
+    "    pass\n",
+    "\n",
+    "class E(B, A):\n",
+    "    def print():\n",
+    "        print('I am E')\n",
+    "\n",
+    "class F:\n",
+    "    def print():\n",
+    "        print('I am F')\n",
+    "\n",
+    "class G:\n",
+    "    def print():\n",
+    "        print('I am G')\n",
+    "\n",
+    "class H(F, G):\n",
+    "    def print():\n",
+    "        print('I am H')\n",
+    "\n",
+    "class I(E):\n",
+    "    def print():\n",
+    "        print('I am I')\n",
+    "class J(H, I):\n",
+    "    def print():\n",
+    "        print('I am J')\n",
+    "\n",
+    "A.print()\n",
+    "B.print()\n",
+    "C.print()\n",
+    "D.print()\n",
+    "E.print() # 본인의 내부 함수가 우선하고 그 다음 가까운 부모 클래스를 찾는다.\n",
+    "\n",
+    "print(E.__mro__) # 이 매소드를 찾아갈때 순서를 알 수 있음 E -> B -> A -> object(가장 최상위 클래스, 모든 클래스의 어버이)\n",
+    "print(J.__mro__)"
+   ]
   }
  ],
  "metadata": {
